Ajout tinymce-react
editeur de text

--- a/public/index.html
+++ b/public/index.html
@@ -46,5 +46,6 @@
     -->
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="https://cdn.tiny.cloud/1/afr7yy3lru6rldw0k574k0ym0jkafxrrmpqy49aqbu72in0a/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
   </body>
 </html>
